[package]
name = "mdbook-compress"
description = "Compress an mdBook project into a single PDF file"
authors = ["nxe"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
mdbook = "0.4.25"
pdf-canvas = "0.7.0"
anyhow = "1.0.68"
html_parser = "0.6.3"
pulldown-cmark = { version = "0.9.2", default-features = false }
