[package]
name = "mdbook-compress"
description = "Compress an mdBook project into a single PDF file"
authors = ["nxe"]
version = "0.1.0"
edition = "2021"
include = ["src"]
repository = "https://github.com/RosiePuddles/mdbook-compress"
keywords = ["mdbook", "pdf"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
mdbook = "0.4.25"
genpdf = "0.2.0"
anyhow = "1.0.68"
scraper = "0.14.0"
ego-tree = "0.6.2"
pulldown-cmark = { version = "0.9.2", default-features = false }
