[package]
name = "mdbook-compress"
description = "Compress an mdBook project into a single PDF file"
authors = ["nxe"]
version = "0.2.0"
edition = "2021"
include = ["src/**/*.rs", "theme/*.txt", "theme/*.ttf", "Cargo.toml"]
repository = "https://github.com/RosiePuddles/mdbook-compress"
homepage = "https://github.com/RosiePuddles/mdbook-compress"
documentation = "https://docs.rs/crate/mdbook-compress/0.1.0"
keywords = ["book", "mdbook", "rustbook", "pdf"]
categories = ["text-processing", "command-line-interface"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
mdbook = "0.4.25"
genpdf = "0.2.0"
anyhow = "1.0.68"
scraper = "0.14.0"
ego-tree = "0.6.2"
pulldown-cmark = { version = "0.9.2", default-features = false }
syntect = "5.0.0"
